--- a/back/back-symbole-it/pom.xml
+++ b/back/back-symbole-it/pom.xml
@@ -15,6 +15,8 @@
 
   <dependencies>
 
+    <!-- Springs -->
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -22,10 +24,37 @@
     </dependency>
 
 
+
+    <!-- BDD -->
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <version>3.1.3</version>
+    </dependency>
+
+    <!-- vu que c'est un projet test, je laisse la bdd en h2 meme en runtime pour vous simplifier le lancement de l'application -->
+    <!-- techniquement je pourrai faire un docker avec une bdd dedans -->
+    <!-- sinon bien sur, il ne faut le faire que pour les tests -->
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.2.222</version>
+    </dependency>
+
+
+    <!-- Tests unitaires  -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <version>3.1.3</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
 
