ajout de firestore et remplacement du repository h2 par celui de firestore dans excuse service

--- a/back/back-symbole-it/pom.xml
+++ b/back/back-symbole-it/pom.xml
@@ -42,6 +42,13 @@
       <version>2.2.222</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.firebase</groupId>
+      <artifactId>firebase-admin</artifactId>
+      <version>9.2.0</version>
+    </dependency>
+
+
 
     <!-- Tests unitaires  -->
     <dependency>
